<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/background_color"
    app:strokeColor="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="5dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/language_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_english"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_russian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_russian"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_turkmen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_turkmen"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            app:cardBackgroundColor="@color/button_level_background"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="3dp"
                android:text="@string/text_cancel"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

